--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact page</title>
+    <%- include('partials/head') %>
+        <link rel="stylesheet" href="./stylesheets/contact.css">
+        <title>Contact page</title>
 </head>
+
 <body>
-    <h1>Contact Page</h1>
-    <a href="http://localhost:8080/" >go to home</a>
+    <%- include('partials/header') %>
+        <!-- "title" container -->
+        <div class="container-fluid header pt-5 p-lg-0 h-font h-color">
+            <div class="row pt-5 pt-lg-0">
+                <div class="col-xs-12 col-lg-6 d-flex align-items-stretch ps-2 ps-lg-5">
+                    <div class="d-flex align-items-center px-5">
+                        <div class="row pt-5 pt-lg-0">
+                            <div class="col-12 fs-1 fw-bold pt-5 pt-lg-0">
+                                Contact Us
+                            </div>
+                            <div class="col-12 fs-5 my-4">
+                                Making a reservation at Délicious restaurant is easy and takes just a couple of minutes.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-none d-lg-block col-lg-6">
+                    <img class="img-fluid" src="./images/home/h1_hero1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <%- include('partials/footer') %>
+
 </body>
+
 </html>
