--- a/views/home.ejs
+++ b/views/home.ejs
@@ -130,7 +130,7 @@
             </div>
         </div>
         <!-- reservation container -->
-        <div id="reserve-container" class="container py-10 px-5 reserve-container">
+        <div tabindex="0" id="reserve-container" class="container py-10 px-5 reserve-container">
             <div class="row d-flex justify-content-between align-items-center">
                 <div class="col-md-12 col-lg-7">
                     <img class="img-fluid" src="./images/home/woner.jpg" alt="">
@@ -217,6 +217,7 @@
         let locals = JSON.parse(invalidData);
         alert(locals.errMessage);
         serverSideValidation(locals);
+        document.getElementById('reserve-container').focus();
     }
 
 
