--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Page</title>
+    <%- include('partials/head') %>
+        <link rel="stylesheet" href="./stylesheets/menu.css">
+        <title>Menu Page</title>
 </head>
+
 <body>
-    <h1>Menu Page</h1>
-    <a href="http://localhost:8080/" >go to home</a>
+    <%- include('partials/header') %>
+        <!-- "title" container -->
+        <div class="container-fluid header pt-5 p-lg-0 h-font h-color">
+            <div class="row pt-5 pt-lg-0">
+                <div class="col-xs-12 col-lg-6 d-flex align-items-stretch ps-2 ps-lg-5">
+                    <div class="d-flex align-items-center px-5">
+                        <div class="row pt-5 pt-lg-0">
+                            <div class="col-12 fs-1 fw-bold pt-5 pt-lg-0">
+                                Food Menu
+                            </div>
+                            <div class="col-12 fs-5 my-4">
+                                Making a reservation at Délicious restaurant is easy and takes just a couple of minutes.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-none d-lg-block col-lg-6">
+                    <img class="img-fluid" src="./images/home/h1_hero1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- Menu container -->
+        <div id="menu-container" class="container-fluid menu-container">
+            <div class="container py-10 px-5">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="row">
+                            <div class="col-12 h-font fw-bold fs-40 h-color">
+                                Most Popular Dishes
+                            </div>
+                            <div class="col-12 fs-18 py-4">
+                                Making a reservation at Délicious restaurant is easy and takes just a couple of minutes.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-start  h-font fs-18 ">
+                    <div class="nav-link ">
+                        <div class="d-inline p-2"> Breakfast</div>
+                    </div>
+                    <div class="nav-link ">
+                        <div class="d-inline p-2"> Lunch</div>
+                    </div>
+                    <div class="nav-link ">
+                        <div class="d-inline p-2"> Dinner</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <%- include('partials/footer') %>
 </body>
+
 </html>
