--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
                                 <div class="admin text-center mx-4 d-flex align-items-center h-font">
                                     <a id="log-out" href="/adminLogin/adminView">Admin Login</a>
                                 </div>
-                                <a href="#reserve-container"><button type="button"
+                                <a href="/#reserve-container"><button type="button"
                                         class="btn btn-danger custom-button py-2 px-md-5">Book
                                         a Table</button>
                                 </a>
