--- a/public/stylesheets/adminView.css
+++ b/public/stylesheets/adminView.css
@@ -36,14 +36,8 @@ body {
 }
 
 /* side navbar */
-
-.position-relative-custom {
-    position: relative;
-}
-
-.position-sticky-custom {
-    position: sticky;
-    top: 0px;
+.side-navbar .border-custom{
+    border-bottom: #4d312c solid 4px;
 }
 
 .side-navbar-menu .items:hover {
@@ -57,6 +51,6 @@ body {
 }
 
 #insertMenu:hover {
-    background-color:#fe5f41 ;
+    background-color: #fe5f41;
     color: white !important;
 }
