--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -18,7 +18,8 @@
                 <form action="/login" method="post">
                     <input type="text" name="userId" id="userId"  class="form-control rounded-pill shadow-sm my-4 p-2-5" placeholder="Enter User ID">
                     <input type="password" name="password" id="password" class="form-control rounded-pill shadow-sm my-4 p-2-5" placeholder="Enter Password">
-                    <button type="submit" class="form-control rounded-pill shadow-sm custom-button my-4 p-2-5">LogIn</button>
+                    <button type="submit" class="form-control rounded-pill shadow-sm custom-button mt-4 p-2-5">LogIn</button>
+                    <button type="button" class="form-control rounded-pill shadow-sm custom-button mt-2 mb-4 p-2-5">Back</button>
                 </form>
             </div>
         </div>
